--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,7 +101,7 @@ background: #8a93a1;
 .hero {
   height: 100%;
   width: 100%;
-  background: url("/dist/images/FreelaceGB.jpg"); 
+  background: url("/dist/img/FreelaceGB.jpg"); 
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;  
