--- a/scss/main.css
+++ b/scss/main.css
@@ -114,7 +114,7 @@ ul li {
 .hero {
   height: 100%;
   width: 100%;
-  background: url("/dist/FreelaceGB.jpg");
+  background-image: url("//css/img/FreelaceGB.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
