--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,7 +111,7 @@ background: #8a93a1;
 }
 
 .hero-text { 
- padding-top: 35%;
+ padding-top: 37%;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -124,7 +124,7 @@ background: #8a93a1;
 .hero h1 {
   font-family: Refira;
   font-weight: bold;
-  font-size: 4.6rem;
+  font-size: 4.8rem;
   color: #000;
   }
 
@@ -435,6 +435,13 @@ align-items: center;
       padding-top: 1.2rem;
   } 
 
+.hero .btn {
+
+  padding: 8px 18px;
+  border-radius: 2px;
+  margin-top: 0.5rem;
+ 
+}
 
 
 
