--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,7 @@ ul li {
     justify-content: center;
     font-family: Calmer;
     background: transparent;
+    position: relative;
    
   }
 
@@ -107,14 +108,16 @@ background: #8a93a1;
   background-size: contain;  
   background-attachment: fixed;
   // margin: 0 auto;
+  
 
 }
 
 .hero-text { 
- padding-top: 37%;
+
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-top: 31.5%;
 } 
 
 .hero a {
@@ -124,8 +127,9 @@ background: #8a93a1;
 .hero h1 {
   font-family: Refira;
   font-weight: bold;
-  font-size: 4.8rem;
+  font-size: 5rem;
   color: #000;
+
   }
 
 .hero h2 {
@@ -133,7 +137,7 @@ background: #8a93a1;
       font-weight: bold;
       font-size: 1.6rem;
       color: #fff;
-      padding-top: 2.5rem;
+      padding-top: 2.7rem;
   } 
 
 
@@ -369,7 +373,7 @@ padding-left: 1rem;
   position: fixed;
  left: 0;
   bottom: 0;
-align-items: center;
+  align-items: center;
   text-align: center;
  padding: 0.5rem 0;
 }
@@ -378,20 +382,21 @@ align-items: center;
   margin: 1rem;
 }
 
-
 /* Mobile */
 @media screen and (max-width: 1024px) {
   #hamnav {
     padding: 0;
-  
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 736px) { 
+ 
  #hamnav {
    padding: 2rem;
    justify-content: left;
    align-content: left;
    text-align: center;
+   margin-bottom: 1rem;
  }
  #hamitems a {
    box-sizing: border-box;
@@ -418,32 +423,27 @@ align-items: center;
  #hamnav input:checked ~ #hamitems { display: block;}
 
 // Hero
-
- .hero h1 {
+.hero h1 {
   font-family: Refira;
   font-weight: bold;
-  font-size:3rem;
+  font-size: 3rem;
   color: #000;
-  padding-top: 32%;
+  padding-top: 30%;
   }
 
 .hero h2 {
       font-family: Calmer;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1rem;
       color: #fff;
-      padding-top: 1.2rem;
+      padding-top: 1.4rem;
   } 
 
 .hero .btn {
-
-  padding: 8px 18px;
+  padding: 8px 13px;
   border-radius: 2px;
-  margin-top: 0.5rem;
- 
+  margin-top: 0.2rem;
 }
-
-
 
 // Gallery
  
@@ -479,10 +479,7 @@ align-items: center;
   .bio p {
    padding: 0 2rem;
    text-align: center;
- 
-
   }
-
 
 //Contact 
 
@@ -504,16 +501,31 @@ align-items: center;
     text-align: left;
   }
   
-
  .text-input{
-
-   padding: 0.7rem 3.5rem;
-  
+  padding: 0.7rem 3.5rem;
 }
 
 // Footer
-
   #main-footer {
     margin-top: 5rem;
   } 
 }
+
+@media screen and (min-height: 812px) {
+  .hero h1 {
+    padding-top: 50%;
+    font-size: 3.8rem;
+  }
+.hero h2 {
+  font-size: 1.1rem;
+  margin-top: 0.6rem;
+}
+.hero .btn {
+  margin-top: 0rem;
+}
+ }
+
+  
+
+
+  
