--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 
 @font-face {
-  font-family: Calmer;
-  src: url("../css/CalmerRegular.ttf");
+  font-family: 'Calmer', sans-serif;
+  src: url('CalmerRegular.ttf');
 
   font-family: Refira;
-  src: url("../css/RefiraAsri2.ttf");
+  src: url('RefiraAsri2.ttf');
 } 
 
 * {
@@ -16,6 +16,7 @@
 html, body {
 height: 100%;
 line-height: 1.5rem;
+font-family: 'Poppins', sans-serif;
 
 }
 
@@ -53,9 +54,12 @@ ul li {
     display: flex;
     justify-content: space-between;
     padding-top: 1rem;
-    position: sticky;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
     justify-content: center;
-    font-family: Calmer;
+    font-family: 'Calmer';
     background: transparent;
     position: relative;
    
@@ -124,7 +128,7 @@ background: #8a93a1;
 }
 
 .hero h1 {
-  font-family: Refira;
+  font-family: 'Refira';
   font-weight: bold;
   font-size: 5.2rem;
   color: #000;
@@ -132,7 +136,7 @@ background: #8a93a1;
   }
 
 .hero h2 {
-      font-family: Calmer;
+      font-family: 'Calmer';
       font-weight: bold;
       font-size: 1.6rem;
       color: #fff;
@@ -234,7 +238,7 @@ background: #8a93a1;
    
     &-text {
       position: absolute;
-      font-family: Calmer;
+      font-family: 'Calmer', sans-serif;
       text-transform: uppercase;
       top: 0;
       left: 0;
@@ -291,7 +295,7 @@ background: #8a93a1;
   border-radius: 50%;
 }
 .bio h2 {
-  font-family: Calmer;
+  font-family: 'Calmer', sans-serif;
   font-size: 2.5rem;
   color: #8a93a1;
   padding-bottom: 1.2rem;
@@ -314,7 +318,7 @@ padding-left: 1rem;
 // Contact Section
 
 .contact-heading h2 {
-  font-family: Calmer;
+  font-family: 'Calmer', sans-serif;
     font-size: 2rem;
     color: #8a93a1;
     text-align: center;
@@ -423,7 +427,7 @@ padding-left: 1rem;
 
 // Hero
 .hero h1 {
-  font-family: Refira;
+  font-family: 'Refira', sans-serif;
   font-weight: bold;
   font-size: 3rem;
   color: #000;
@@ -431,7 +435,7 @@ padding-left: 1rem;
   }
 
 .hero h2 {
-      font-family: Calmer;
+      font-family: 'Calmer', sans-serif;
       font-weight: bold;
       font-size: 1rem;
       color: #fff;
@@ -512,7 +516,7 @@ padding-left: 1rem;
 
 @media screen and (min-height: 812px) {
   .hero h1 {
-    padding-top: 53%;
+    padding-top: 55%;
     font-size: 3.8rem;
   }
 .hero h2 {
