--- a/scss/main.scss
+++ b/scss/main.scss
@@ -537,7 +537,17 @@ padding-left: 1rem;
 }
  }
 
+/* 1792x828px at 326ppi */
+ @media only screen 
+    and (device-width : 414px) 
+    and (device-height : 896px) 
+    and (-webkit-device-pixel-ratio : 2) 
+    and (orientation: portrait) { 
+      .hero h1 {
+    padding-top: 55%;
+    }
 
+  }
   
 
 
